#######################################################################
# CONFIGURATION FILE
# This is the preferred file format in place of older setup.py
#
# Examples
# --------
#     # recommended installation
#     >>> conda install shadie -c conda-forge
#
#     # Or, for developers, install dependencies and then toytree w/ pip local:
#     >>> conda install shadie -c conda-forge --only-deps
#     >>> git clone https://github.com/elissasoroj/shadie
#     >>> cd shadie/
#     >>> pip install -e . --no-deps
#######################################################################

[metadata]
name = shadie
version = attr: shadie.__version__
author = Elissa Sorojsrisom, Deren Eaton
author_email = ess2239@columbia.edu, de2356@columbia.edu
url = https://elissasoroj.github.io/shadie
description = SLiM simulations in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = evolution, simulation, tree, coalescent, mutation, selection, forward
license = GPL
license_files =
    LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
zip_safe = True   # use False if you use __file__ in your code.
include_package_data = True
install_requires =
    python >= 3.7
    toytree >= 3.0
    slim >= 4.1
    pyslim
    altair
    # slim >= 4.2

